class_name MobileControls
extends CanvasLayer

# üåü Se√±al para enviar el vector de movimiento al personaje
signal movement_vector_changed(direction_vector)

# üïπÔ∏è Diccionario para rastrear el estado de cada direcci√≥n
var active_directions: Dictionary = {
	"up": false,
	"down": false,
	"left": false,
	"right": false
}

func _ready() -> void:
	# Opcional: Si necesitas que los botones sean semitransparentes
	for child in get_children():
		if child is TouchScreenButton:
			child.modulate = Color(1, 1, 1, 0.6)
			
			# Conecta las se√±ales 'pressed' y 'released' de cada bot√≥n
			# Los nombres de los nodos deben coincidir (Button_UP, Button_DOWN, etc.)
			if child.name == "Button_UP":
				child.connect("pressed", Callable(self, "_on_button_pressed").bind("up"))
				child.connect("released", Callable(self, "_on_button_released").bind("up"))
			elif child.name == "Button_DOWN":
				child.connect("pressed", Callable(self, "_on_button_pressed").bind("down"))
				child.connect("released", Callable(self, "_on_button_released").bind("down"))
			elif child.name == "Button_LEFT":
				child.connect("pressed", Callable(self, "_on_button_pressed").bind("left"))
				child.connect("released", Callable(self, "_on_button_released").bind("left"))
			elif child.name == "Button_RIGHT":
				child.connect("pressed", Callable(self, "_on_button_pressed").bind("right"))
				child.connect("released", Callable(self, "_on_button_released").bind("right"))

# üü¢ Funci√≥n que se llama cuando un bot√≥n t√°ctil se presiona
func _on_button_pressed(direction: String) -> void:
	active_directions[direction] = true
	_calculate_movement_vector()

# üî¥ Funci√≥n que se llama cuando un bot√≥n t√°ctil se suelta
func _on_button_released(direction: String) -> void:
	active_directions[direction] = false
	_calculate_movement_vector()

# üìê Funci√≥n principal para calcular el vector de movimiento de 8 direcciones
func _calculate_movement_vector() -> void:
	var direction_vector: Vector2 = Vector2.ZERO
	
	if active_directions.up:
		direction_vector.y -= 1
	if active_directions.down:
		direction_vector.y += 1
	if active_directions.left:
		direction_vector.x -= 1
	if active_directions.right:
		direction_vector.x += 1
		
	# Normaliza el vector para que la diagonal no sea m√°s r√°pida
	if direction_vector.length_squared() > 0:
		direction_vector = direction_vector.normalized()
		
	# Emitir la se√±al con el vector calculado
	movement_vector_changed.emit(direction_vector)
